<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium"
    android:background="?attr/colorBackground">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textAppearance="@style/TextAppearance.Headline5"
        android:textColor="?attr/colorOnBackground" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/home_description"
        android:textAppearance="@style/TextAppearance.Body1"
        android:textColor="?attr/colorOnBackground" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonProcessOrders"
        style="@style/Widget.Lecom.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/home_button_process" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:textAppearance="@style/TextAppearance.Subtitle1"
        android:textColor="?attr/colorOnBackground"
        android:text="@string/home_result_placeholder" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@color/divider" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGoToDetails"
        style="@style/Widget.Lecom.Button.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/home_button_go_details" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOpenSummaryPage"
        style="@style/Widget.Lecom.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/home_button_open_page" />

</LinearLayout>

